--- a/flavors/python-3.8-cuda-conda-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
+++ b/flavors/python-3.8-cuda-conda-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
@@ -16,9 +16,11 @@ FROM {{flavor_base_deps}}
 
 RUN mkdir -p /build_info/packages/flavor_customization
 
-ENV CONDA_OVERRIDE_CUDA=11.5
 COPY flavor_customization/packages /build_info/packages/flavor_customization
-RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/flavor_customization/conda_packages --channel-file /build_info/packages/flavor_customization/conda_channels --with-versions --allow-no-version
+RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/flavor_customization/conda_packages --channel-file /build_info/packages/flavor_customization/conda_channels --with-versions --allow-no-version --conda-binary /opt/conda/bin/mamba
+
+COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary /opt/conda/python3.8 --with-versions --allow-no-version
 
 ##########################################################################
 ##########################################################################
