--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "script-languages"
+name = "exasol-script-languages"
 version = "5.0.0"
 description = "Script Languages"
 
@@ -18,10 +18,14 @@ keywords = ['exasol', 'udf', 'script-languages']
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
-importlib-resources = ">=5.4.0"
 exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.14.0/exasol_script_languages_container_tool-0.14.0-py3-none-any.whl" }
 exasol-script-languages-container-ci = {url = "https://github.com/exasol/script-languages-container-ci/releases/download/0.4.0/exasol_script_languages_container_ci-0.4.0-py3-none-any.whl"}
 exasol-script-languages-container-ci-setup = {url = "https://github.com/exasol/script-languages-container-ci-setup/releases/download/0.5.0/exasol_script_languages_container_ci_setup-0.5.0-py3-none-any.whl"}
+
+[tool.poetry.dev-dependencies]
+toml = ">=0.10.2"
+gitpython = ">=3.1.0"
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
