--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_customization/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_customization/Dockerfile
@@ -20,7 +20,7 @@ COPY flavor_customization/packages /build_info/packages/flavor_customization
 RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/flavor_customization/conda_packages --channel-file /build_info/packages/flavor_customization/conda_channels --with-versions --allow-no-version --conda-binary /opt/conda/bin/mamba
 
 COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization
-RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary /opt/conda/python3.8 --with-versions --allow-no-version
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary /opt/conda/bin/python3.8 --with-versions --allow-no-version
 
 ##########################################################################
 ##########################################################################
