Moved install_dev_tools.sh -> ext/dev_tools

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -30,4 +30,5 @@ ENV EXAPLUS=/downloads/EXAplus/exaplus
 COPY requirements.txt requirements.txt
 RUN pip3 install -r "requirements.txt"
 
-COPY install_dev_tools.sh /
+RUN mkdir -p /dev_tools
+COPY ext/scripts/dev_tools/install_dev_tools.sh /dev_tools
