#673: Added dev-tools-script to test container (#322)
related to https://github.com/exasol/script-languages-release/issues/673

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -29,3 +29,6 @@ ENV EXAPLUS=/downloads/EXAplus/exaplus
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r "requirements.txt"
+
+RUN mkdir -p /dev_tools
+COPY ext/scripts/dev_tools/install_dev_tools.sh /dev_tools
