--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ keywords = ['exasol', 'udf', 'script-languages']
 python = ">=3.8,<4"
 exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.15.0/exasol_script_languages_container_tool-0.15.0-py3-none-any.whl" }
 exasol-script-languages-container-ci = {url = "https://github.com/exasol/script-languages-container-ci/releases/download/0.5.0/exasol_script_languages_container_ci-0.5.0-py3-none-any.whl"}
-exasol-script-languages-container-ci-setup = {url = "https://github.com/exasol/script-languages-container-ci-setup/releases/download/0.6.0/exasol_script_languages_container_ci_setup-0.6.0-py3-none-any.whl"}
+exasol-script-languages-container-ci-setup = {git = "https://github.com/exasol/script-languages-container-ci-setup.git", branch="bug/33_update_poetry_installation"}
 
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
