--- a/aws-code-build/ci/build_buildspec.yaml
+++ b/aws-code-build/ci/build_buildspec.yaml
@@ -19,7 +19,7 @@ phases:
     commands:
       - git submodule update --init --recursive
       - curl -sSL https://install.python-poetry.org | python3 -
-      - export PATH=$PATH:$HOME/.poetry/bin
+      - export PATH=$PATH:$HOME/.local/bin
       - poetry env use $(command -v "python3.8")
       - poetry install
 
