added aws buildspecs to .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 poetry.lock linguist-generated=true
 setup.py linguist-generated=true
 exaslct_scripts/*.sh linguist-generated=true
+aws-code-build/ci/*.yaml linguist-generated=true
