--- a/aws-code-build/ci/build_buildspec.yaml
+++ b/aws-code-build/ci/build_buildspec.yaml
@@ -18,8 +18,8 @@ phases:
       python: 3.8
     commands:
       - git submodule update --init --recursive
-      - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3 -
-      - export PATH=$PATH:$HOME/.poetry/bin
+      - curl -sSL https://install.python-poetry.org | python3 -
+      - export PATH=$PATH:$HOME/.local/bin
       - poetry env use $(command -v "python3.8")
       - poetry install
 
