--- a/exaudfclient/base/WORKSPACE
+++ b/exaudfclient/base/WORKSPACE
@@ -32,7 +32,7 @@ load("@rules_jvm_external//:defs.bzl", "maven_install")
 
 maven_install(
     artifacts = [
-        "junit:junit:4.12",
+        "com.exasol:udf-api-java:1.0.0",
     ],
     repositories = [
         "https://repo1.maven.org/maven2",
