--- a/.github/workflows/check_package_diffs.yaml
+++ b/.github/workflows/check_package_diffs.yaml
@@ -14,15 +14,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Setup Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Install Poetry
-      uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: 1.2.0
+    - uses: ./.github/actions/prepare_poetry_env
 
     - name: Setup Poetry
       run: |
