Port the aws-code-build/build_config.json to the new format

--- a/aws-code-build/build_config.json
+++ b/aws-code-build/build_config.json
@@ -1,10 +1,28 @@
-{"build_ignore":
-  {"ignored_paths":
-     ["python_client", ".gitignore", ".dockerignore", "LICENSE",
-      "README.md", "find_duplicate_error_codes.sh", "find_error_codes.sh",
-      "find_highest_error_codes_per_module.sh", "find_incomplete_error_codes.sh", "find_next_error_code_per_module.sh",
-      "show_code_arround_error_codes.sh", "visualize_task_dependencies.sh", "udf-script-signature-generator",
-      ".github", "cpp_client", "emulator", "exaslct_scripts", "githooks"]
+{
+  "build": {
+    "base_branch": "master",
+    "ignore": {
+      "paths": [
+        "python_client",
+        ".gitignore",
+        ".dockerignore",
+        "LICENSE",
+        "README.md",
+        "find_duplicate_error_codes.sh",
+        "find_error_codes.sh",
+        "find_highest_error_codes_per_module.sh",
+        "find_incomplete_error_codes.sh",
+        "find_next_error_code_per_module.sh",
+        "show_code_arround_error_codes.sh",
+        "visualize_task_dependencies.sh",
+        "udf-script-signature-generator",
+        ".github",
+        "cpp_client",
+        "emulator",
+        "exaslct_scripts",
+        "githooks"
+      ]
+    }
   },
-  "base_branch": "master"
+  "release": {"timeout_in_minutes": 240}
 }
