Replace hardcoded /opt/conda with environment variable

--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_base/base_test_build_run/Dockerfile
@@ -9,9 +9,9 @@ COPY /exaudfclient/base /exaudfclient/base
 
 WORKDIR /exaudfclient/base
 # We need to build with optimize here, because the debug build fails to run with a runtime linking error regarding protobuf
-env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/conda/lib/
-env CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:/opt/conda/include/
-env C_INCLUDE_PATH=$C_INCLUDE_PATH:/opt/conda/include/
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$MAMBA_ROOT_PREFIX/lib/
+ENV CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
+ENV C_INCLUDE_PATH=$C_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
 RUN ./build.sh --config no-tty -c dbg --config python --config test-binaries-py3
 RUN cp -r -L bazel-bin/* /exaudf
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
