--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_base/release/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_base/release/Dockerfile
@@ -66,5 +66,5 @@ RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN mkdir -p /build_info/actual_installed_packages/release && \
     /scripts/list_installed_scripts/list_installed_apt.sh > /build_info/actual_installed_packages/release/apt_get_packages && \
-    /scripts/list_installed_scripts/list_installed_pip.sh /opt/conda/bin/python3.8 > /build_info/actual_installed_packages/release/python3_pip_packages && \
+    /scripts/list_installed_scripts/list_installed_pip.sh "$MAMBA_ROOT_PREFIX/bin/python3.8" > /build_info/actual_installed_packages/release/python3_pip_packages && \
    /scripts/list_installed_scripts/list_installed_conda.sh > /build_info/actual_installed_packages/release/conda_packages
