--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_base/udfclient_deps/Dockerfile
@@ -4,7 +4,7 @@ COPY udfclient_deps/packages /build_info/packages/udfclient_deps
 
 RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/udfclient_deps/conda_packages --channel-file /build_info/packages/udfclient_deps/conda_channels --with-versions --conda-binary /bin/micromamba
 
-ENV PROTOBUF_LIBRARY_PREFIX=/opt/conda/lib
-ENV PROTOBUF_INCLUDE_PREFIX=/opt/conda/include
-ENV ZMQ_LIBRARY_PREFIX=/opt/conda/lib
-ENV ZMQ_INCLUDE_PREFIX=/opt/conda/include
+ENV PROTOBUF_LIBRARY_PREFIX=$MAMBA_ROOT_PREFIX/lib
+ENV PROTOBUF_INCLUDE_PREFIX=$MAMBA_ROOT_PREFIX/include
+ENV ZMQ_LIBRARY_PREFIX=$MAMBA_ROOT_PREFIX/lib
+ENV ZMQ_INCLUDE_PREFIX=$MAMBA_ROOT_PREFIX/include
