--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [tool.poetry]
+package-mode = false
 name = "exasol-script-languages"
 version = "7.1.0"
 description = "Script Languages"
@@ -21,6 +22,7 @@ python = ">=3.8,<4"
 exasol-script-languages-container-tool = "^0.18.0"
 exasol-script-languages-container-ci = "^1.3.0"
 exasol-script-languages-container-ci-setup = "^1.2.0"
+docker = "!= 7.0.0"
 
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
