--- a/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/security_scan/.trivyignore
@@ -18,6 +18,14 @@ CVE-2024-26583
 CVE-2024-26828
 CVE-2024-26865
 CVE-2024-26585
+CVE-2023-52433
+CVE-2024-26642
+CVE-2024-26643
+CVE-2024-26800
+CVE-2024-26921
+CVE-2024-26923
+CVE-2024-26924
+CVE-2024-26925
 # CVE-2023-20569 does not have a fix and is a problem of host system (amd cpus)
 CVE-2023-20569 
 #CVE-2022-23648 is a bug in containerd, not issue for containers
