--- a/flavors/template-Exasol-all-python-3.10/flavor_base/language_deps/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10/flavor_base/language_deps/Dockerfile
@@ -8,8 +8,8 @@ RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/lang
 RUN /scripts/install_scripts/install_python3.10_pip.sh "pip == 21.3.1"
 
 COPY language_deps/packages/python3_pip_packages /build_info/packages/language_deps
-RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/language_deps/python3_pip_packages --python-binary python3 --with-versions
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/language_deps/python3_pip_packages --python-binary python3.10d --with-versions
 
 ENV PYTHON3_PREFIX /usr
-ENV PYTHON3_VERSION python3.10
+ENV PYTHON3_VERSION python3.10d
 
