--- a/exaudfclient/base/.bazelrc
+++ b/exaudfclient/base/.bazelrc
@@ -5,6 +5,7 @@ build:java  --define java=true --action_env=JAVA_PREFIX
 build:python --define python=true  --action_env=PYTHON2_SYSPATH --action_env=PYTHON2_PREFIX --action_env=PYTHON2_VERSION --action_env=NUMPY_PREFIX --action_env=PYTHON3_SYSPATH --action_env=PYTHON3_PREFIX --action_env=PYTHON3_VERSION
 build:fast-binary-py3 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_complete.so"' --define binary_type=fast_binary //:exaudfclient_py3
 build:slow-wrapper-py3 --define binary_type=slow_wrapper //:exaudfclient_py3
+build:valgrind-wrapper-py3 --config=slow-wrapper-py3 --define wrapper_type=valgrind_wrapper //:exaudfclient_py3
 build:static-binary-py3 //:exaudfclient_py3_static
 build:test-binaries-py3 --config=static-binary-py3 --config=slow-wrapper-py3
 build:verbose --copt='-v' --subcommands --verbose_failures --announce_rc
