--- a/flavors/template-Exasol-all-python-3.10-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-all-python-3.10-conda/flavor_base/security_scan/.trivyignore
@@ -26,6 +26,7 @@ CVE-2024-26921
 CVE-2024-26923
 CVE-2024-26924
 CVE-2024-26925
+CVE-2024-27397
 # CVE-2023-20569 does not have a fix and is a problem of host system (amd cpus)
 CVE-2023-20569 
 #CVE-2022-23648 is a bug in containerd, not issue for containers
