Test CUDA Flavor with Tensorflow and CUDA 12.4

--- a/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/nvidia_driver_deps/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/nvidia_driver_deps/Dockerfile
@@ -12,8 +12,8 @@ RUN mkdir -p /build_info/packages
 COPY nvidia_driver_deps/packages /build_info/packages/nvidia_driver_deps
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/nvidia_driver_deps/apt_get_packages --with-versions
 
-ENV NVIDIA_DRIVER_VERSION=550.54.15
-RUN /scripts/install_scripts/install_nvidia_driver_libs.sh "$NVIDIA_DRIVER_VERSION"
+#ENV NVIDIA_DRIVER_VERSION=550.54.15
+#RUN /scripts/install_scripts/install_nvidia_driver_libs.sh "$NVIDIA_DRIVER_VERSION"
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
