Changed working dir when running test_udfclient.sh

--- a/flavors/template-Exasol-all-python-3.10/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10/flavor_base/base_test_build_run/Dockerfile
@@ -29,8 +29,10 @@ COPY /exaudfclient/ /exaudfclient/
 WORKDIR /exaudfclient/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --lockfile_mode=off --config no-tty -c dbg --config python --config test-binaries-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
-RUN ./base/test_udfclient.sh /exaudf/exaudfclient_py3
-RUN ./base/test_udfclient.sh /exaudf/exaudfclient_py3_static
+
+WORKDIR /exaudfclient/base
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3_static
 
 WORKDIR /
 RUN mkdir /exasol_emulator
